// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPartiel /> should add a period 1`] = `
.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c11 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 1.25rem 0;
}

.c11:focus,
.c11:hover,
.c11:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  padding: 0;
  font-size: 1rem;
  text-align: right;
  line-height: inherit;
  width: 8em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c8 {
  padding: 0;
  font-size: 1rem;
  text-align: right;
  line-height: inherit;
  width: 10em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c7 {
  display: inline-block;
  position: relative;
}

.c9 {
  color: #adb9c9;
  position: absolute;
  right: 0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c10 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h2
    class="c0"
  >
    Périodes de travail
  </h2>
  <p>
    Renseigner vos différentes périodes de travail
  </p>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value=""
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value=""
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        aria-pressed="false"
        class="c10"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    aria-pressed="false"
    class="c11"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should delete a period 1`] = `
.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c11 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 1.25rem 0;
}

.c11:focus,
.c11:hover,
.c11:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  padding: 0;
  font-size: 1rem;
  text-align: right;
  line-height: inherit;
  width: 8em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c8 {
  padding: 0;
  font-size: 1rem;
  text-align: right;
  line-height: inherit;
  width: 10em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c7 {
  display: inline-block;
  position: relative;
}

.c9 {
  color: #adb9c9;
  position: absolute;
  right: 0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c10 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h2
    class="c0"
  >
    Périodes de travail
  </h2>
  <p>
    Renseigner vos différentes périodes de travail
  </p>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        aria-pressed="false"
        class="c10"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    aria-pressed="false"
    class="c11"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should render 1`] = `
.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c11 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 1.25rem 0;
}

.c11:focus,
.c11:hover,
.c11:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  padding: 0;
  font-size: 1rem;
  text-align: right;
  line-height: inherit;
  width: 8em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c8 {
  padding: 0;
  font-size: 1rem;
  text-align: right;
  line-height: inherit;
  width: 10em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c7 {
  display: inline-block;
  position: relative;
}

.c9 {
  color: #adb9c9;
  position: absolute;
  right: 0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c10 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h2
    class="c0"
  >
    Périodes de travail
  </h2>
  <p>
    Renseigner vos différentes périodes de travail
  </p>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value="12"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value="2000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        aria-pressed="false"
        class="c10"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[1].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[1].duration"
        size="8"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[1].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        aria-pressed="false"
        class="c10"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    aria-pressed="false"
    class="c11"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;
